# src/main/java/com/dsniatecki/carstorage/car/CarInternalController.java
@@ -1,8 +1,8 @@
 package com.dsniatecki.carstorage.car;
 
 import com.dsniatecki.carstorage.api.internal.CarsApi;
-import com.dsniatecki.carstorage.model.internal.CarDTO;
-import com.dsniatecki.carstorage.model.internal.CarDataDTO;
+import com.dsniatecki.carstorage.model.internal.CarDataDto;
+import com.dsniatecki.carstorage.model.internal.CarDto;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -26,32 +26,32 @@ class CarInternalController implements CarsApi {
     }
 
     @Override
-    public Mono<ResponseEntity<CarDTO>> getCar(String carId, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<CarDto>> getCar(String carId, ServerWebExchange exchange) {
         return carService.get(carId)
-                .map(car -> ResponseEntity.ok(InternalMapper.toCarDTO(car)))
+                .map(car -> ResponseEntity.ok(InternalMapper.toCarDto(car)))
                 .switchIfEmpty(Mono.error(new NoSuchElementException("Car with id: '" + carId + "' does not exist.")));
     }
 
     @Override
-    public Mono<ResponseEntity<Flux<CarDTO>>> getCars(Optional<Set<String>> carIds, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<Flux<CarDto>>> getCars(Optional<Set<String>> carIds, ServerWebExchange exchange) {
         return Mono.just(carIds.map(carService::getMultiple).orElseGet(carService::getAll))
-                .map(flux -> flux.map(InternalMapper::toCarDTO))
+                .map(flux -> flux.map(InternalMapper::toCarDto))
                 .map(ResponseEntity::ok);
     }
 
     @Override
-    public Mono<ResponseEntity<CarDTO>> createCar(Mono<CarDataDTO> carDataDTO, ServerWebExchange exchange) {
-        return carDataDTO
-                .flatMap(dto -> carService.save(InternalMapper.toCarData(dto)))
-                .map(car -> ResponseEntity.status(HttpStatus.CREATED).body(InternalMapper.toCarDTO(car)));
+    public Mono<ResponseEntity<CarDto>> createCar(Mono<CarDataDto> carDataDto, ServerWebExchange exchange) {
+        return carDataDto
+                .flatMap(Dto -> carService.save(InternalMapper.toCarData(Dto)))
+                .map(car -> ResponseEntity.status(HttpStatus.CREATED).body(InternalMapper.toCarDto(car)));
     }
 
     @Override
-    public Mono<ResponseEntity<CarDTO>> updateCar(String carId, Mono<CarDataDTO> carDataDTO, ServerWebExchange exchange) {
-        return carDataDTO
-                .flatMap(dto -> carService.update(carId, InternalMapper.toCarData(dto)))
+    public Mono<ResponseEntity<CarDto>> updateCar(String carId, Mono<CarDataDto> carDataDto, ServerWebExchange exchange) {
+        return carDataDto
+                .flatMap(Dto -> carService.update(carId, InternalMapper.toCarData(Dto)))
                 .switchIfEmpty(Mono.error(new NoSuchElementException("Car with id: '" + carId + "' does not exist.")))
-                .map(car -> ResponseEntity.status(HttpStatus.CREATED).body(InternalMapper.toCarDTO(car)));
+                .map(car -> ResponseEntity.status(HttpStatus.CREATED).body(InternalMapper.toCarDto(car)));
     }
 
     @Override
