# src/main/java/com/dsniatecki/carstorage/car/CarPublicController.java
@@ -1,7 +1,7 @@
 package com.dsniatecki.carstorage.car;
 
 import com.dsniatecki.carstorage.api.pub.CarsApi;
-import com.dsniatecki.carstorage.model.pub.CarDTO;
+import com.dsniatecki.carstorage.model.pub.CarDto;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -25,16 +25,16 @@ class CarPublicController implements CarsApi {
     }
 
     @Override
-    public Mono<ResponseEntity<CarDTO>> getCar(String carId, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<CarDto>> getCar(String carId, ServerWebExchange exchange) {
         return carService.get(carId)
-                .map(car -> ResponseEntity.ok(PublicMapper.toCarDTO(car)))
+                .map(car -> ResponseEntity.ok(PublicMapper.toCarDto(car)))
                 .switchIfEmpty(Mono.error(new NoSuchElementException("Car with id: '" + carId + "' does not exist.")));
     }
 
     @Override
-    public Mono<ResponseEntity<Flux<CarDTO>>> getCars(Optional<Set<String>> carIds, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<Flux<CarDto>>> getCars(Optional<Set<String>> carIds, ServerWebExchange exchange) {
         return Mono.just(carIds.map(carService::getMultiple).orElseGet(carService::getAll))
-                .map(flux -> flux.map(PublicMapper::toCarDTO))
+                .map(flux -> flux.map(PublicMapper::toCarDto))
                 .map(ResponseEntity::ok);
     }
 }
